--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <div class="coffee">
-        <img src="img/Coffee-HD-Wallpaper-Desktop.jpg" style="width: 100%; height: 800px;">
+        <img alt="Coffee" src="img/Coffee-HD-Wallpaper-Desktop.jpg" style="width: 100%; height: 800px;">
         <div class="label">
             <h1>Let's Have A <br>Coffee Break.</h1>
             <br>
@@ -28,28 +28,33 @@
             <h1>- Christian Barbosa</h1>
         </div>
     </div>
+
+    <video autoplay loop muted plays-inline class="back-video">
+        <source src="coffee-video.mp4">
+    </video>
+
     <div class="bg-coffee">
         <div class="menu">
             <h1>Coffee Menu</h1>
         </div>
-        <img src="img/1-.jpg" style="width: 100%; height: 800px;">
+        <img alt="img1" src="img/1-.jpg" style="width: 100%; height: 800px;">
         <div class="menu-content">
             <div class="latte">
-                <img src="img/latte.jpeg" style="width:300px; height: 300px;">
+                <img alt="latte" src="img/latte.jpeg" style="width:300px; height: 300px;">
                 <section>
                     <h1>Latte</h1>
                     <br> $50.00 (Best Seller)
                 </section>
             </div>
             <div class="espresso">
-                <img src="img/espresso-bg.jpg" style="width:300px; height: 300px;">
+                <img alt="espresso" src="img/espresso-bg.jpg" style="width:300px; height: 300px;">
                 <section>
                     <h1>Espresso</h1>
                     <br> $60.00
                 </section>
             </div>
             <div class="black-coffee">
-                <img src="img/black-coffee.jpg" style="width:300px; height: 300px;">
+                <img alt="black-coffee" src="img/black-coffee.jpg" style="width:300px; height: 300px;">
                 <section>
                     <h1>Black Coffee</h1>
                     <br> $45.00
@@ -64,7 +69,7 @@
 
             </div>
         </div>
-        <img src="img/bg2.png" style="width: 100%; height: 800px;">
+        <img alt="bg2" src="img/bg2.png" style="width: 100%; height: 800px;">
 
     </div>
 
