--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project01</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Favicons -->
+    <link href="img/coffeelogo.png" rel="icon">
+    <link href="img/coffeelogo.png" rel="apple-touch-icon">
 </head>
 
 <body>
